--- a/index.html
+++ b/index.html
@@ -69,10 +69,7 @@
 
 </style>
 <div id="top" class="hero disabled">
-    <div class="hero-inner">
-      <img src="images/bg.jpg" class="bg" alt="">
-      <img src="images/btn.svg" alt="" class="button"/> 
-    </div>
+   <iframe src="https://start.pm.ua/football-ua-frame-banner/?coff1=1" frameborder="0"></iframe>
 </div>
 <!--<script type="text/javascript" src="js/body.js"></script>-->
 </body>
